--- a/index.html
+++ b/index.html
@@ -1,41 +1,102 @@
-<html>
-	<head>
-		<title>КогутАнна - StudyLink</title>
-		<style>
-			body{
-			background-color: #c7a591;
-			
-			color: #f0dace;
-			}
-			h1{ font-size:35px
-			}
-			h2{ font-size: 30px
-			}
-			li{
-			marin: 15px 0;
-			font-size: 20px;
-			}
-		</style>
-		
-	</head>
-	
-	<body>
-	
-		<h1 align="center">Курси StudyLink</h1>
-		<h2 align="center">Когут Анна</h2>
-	
-		<ol>
-			<!--Тема 1-->
-			<li>
-				 Списки, тег hr
-				<ol>
-					<li>Z1 - AnnaKohut.github.io/t4/z1.html</li>
-					<li>Z2 - AnnaKohut.github.io/t4/z2.html</li>
-					<li>Z3 - AnnaKohut.github.io/t4/z3.html</li>
-				</ol>
-			</li>
-			
-		</ol>
-			
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Шаблон 1</title>
+    <link rel="stylesheet" href="slyles.css">
+</head>
+<body>
+    <nav class="menu">
+        <a href="index.html">main</a>
+        <a href="news.html">news</a>
+        <a href="about.html">about us</a>
+    </nav> 
+
+    <header>
+        <div class="fon">
+            <div class="left">Around the world</div>
+            <div class="right">Discover the new</div>
+        </div>
+    </header>
+
+    <main>
+        <div class="articles">
+            <article>
+                <h2>London (United Kingdom)</h2>
+
+                <hr>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi eum inventore facere alias fugit dignissimos possimus? Doloribus in aut inventore facilis, veritatis labore aliquid libero, ducimus doloremque asperiores dolores ratione.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam nesciunt explicabo optio? Rerum officia et aliquid minus commodi atque reprehenderit dolore a vitae, temporibus, consequatur optio ab. Ducimus, expedita est.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eligendi ex excepturi, quia velit quod possimus fugit, error repellat nobis nam, ipsa esse necessitatibus dolore officiis voluptatibus repudiandae quae? Eum?</p>
+            </hr>
+            <h2>Marseille (France)</h2>
+            <hr>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi eum inventore facere alias fugit dignissimos possimus? Doloribus in aut inventore facilis, veritatis labore aliquid libero, ducimus doloremque asperiores dolores ratione.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam nesciunt explicabo optio? Rerum officia et aliquid minus commodi atque reprehenderit dolore a vitae, temporibus, consequatur optio ab. Ducimus, expedita est.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eligendi ex excepturi, quia velit quod possimus fugit, error repellat nobis nam, ipsa esse necessitatibus dolore officiis voluptatibus repudiandae quae? Eum?</p>
+        </hr>
+        <h2>Lviv (Ukraine)</h2>
+        <hr>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi eum inventore facere alias fugit dignissimos possimus? Doloribus in aut inventore facilis, veritatis labore aliquid libero, ducimus doloremque asperiores dolores ratione.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam nesciunt explicabo optio? Rerum officia et aliquid minus commodi atque reprehenderit dolore a vitae, temporibus, consequatur optio ab. Ducimus, expedita est.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eligendi ex excepturi, quia velit quod possimus fugit, error repellat nobis nam, ipsa esse necessitatibus dolore officiis voluptatibus repudiandae quae? Eum?</p>
+    </hr>
+    <h2>Hamburg (Germany)</h2>
+    <hr>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi eum inventore facere alias fugit dignissimos possimus? Doloribus in aut inventore facilis, veritatis labore aliquid libero, ducimus doloremque asperiores dolores ratione.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam nesciunt explicabo optio? Rerum officia et aliquid minus commodi atque reprehenderit dolore a vitae, temporibus, consequatur optio ab. Ducimus, expedita est.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eligendi ex excepturi, quia velit quod possimus fugit, error repellat nobis nam, ipsa esse necessitatibus dolore officiis voluptatibus repudiandae quae? Eum?</p>
+</hr>
+
+            </article>
+        </div>
+
+        <aside>
+           <div class="search">
+                <input type="text" placeholder="type here...">
+                <button>Search</button>
+           </div>
+            
+           <div class="list1">
+               <h3>Continents</h3>
+
+               <ul type="square">
+                <li><a href="">Africa</a></li>
+                <li><a href="">Europe</a></li>
+                <li><a href="">Asia</a></li>
+                <li><a href="">North America</a></li>
+                <li><a href="">South America</a></li>
+                <li><a href="">Antarctica</a></li>
+                <li><a href="">Australia</a></li>
+               </ul>
+
+               <div class="list2">
+                <h3>Countries</h3>
+ 
+                <ul type="square">
+                 <li><a href="">France</a></li>
+                 <li><a href="">Spain</a></li>
+                 <li><a href="">Germany</a></li>
+                 <li><a href="">Italy</a></li>
+                 <li><a href="">Norvey</a></li>
+                 <li><a href="">Sweden</a></li>
+                 <li><a href="">Austria</a></li>
+                 <li><a href="">Czech Republic</a></li>
+                 <li><a href="">Lithuania</a></li>
+                 <li><a href="">Ukraine</a></li>
+                 <li><a href="">Estonia</a></li>
+                </ul>
+             </div>
+            </div>
+        </aside>
+
+
+    </main>
+</body>
 </html>
